# Dorna_Robot

./: README.md
install/: local_setup.sh  setup.sh
install/Assem3/share/Assem3/: package.bash  package.zsh
install/diffbot_description/share/diffbot_description/: package.sh
install/dorna_robot/share/dorna_robot/: base_link.STL  dorna_ros2_control_hwI_plugin.xml  link1.STL  link2.STL  link3.STL  link4.STL  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/four_ws_control/share/four_ws_control/: local_setup.sh  package.sh
install/gazebo_simulation/share/gazebo_simulation/: package.bash  package.zsh
install/mec_mobile/share/mec_mobile/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mec_mobile_description/share/mec_mobile_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_pkg/lib/my_first_pkg/: my_node
install/my_first_pkg/share/my_first_pkg/: package.sh
install/ros2_control_demo_description/share/ros2_control_demo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_control_demo_example_1/share/ros2_control_demo_example_1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_1.xml
install/ros2_control_demo_example_10/share/ros2_control_demo_example_10/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_10.xml
install/ros2_control_demo_example_11/share/ros2_control_demo_example_11/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_11.xml
install/ros2_control_demo_example_12/include/ros2_control_demo_example_12/: passthrough_controller_parameters.hpp
install/ros2_control_demo_example_12/share/ros2_control_demo_example_12/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  passthrough_controller.xml  ros2_control_demo_example_12.xml
install/ros2_control_demo_example_13/share/ros2_control_demo_example_13/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple_robot/share/simple_robot/: package.bash  (+1 more)
log/: latest_build  latest_list
src/dorna_robot/: CMakeLists.txt  dorna_ros2_control_hwI_plugin.xml
src/dorna_robot/bringup/config/: controllers.yaml
src/dorna_robot/bringup/launch/: dorna_gazebo.launch.py
src/dorna_robot/description/gazebo/: dorna.gazebo.xacro
src/dorna_robot/description/launch/: view_robot.launch.py
src/dorna_robot/description/ros2_control/: dorna.ros2_control.xacro
src/dorna_robot/description/rviz/: dorna_world.rviz
src/dorna_robot/description/urdf/: dorna.materials.xacro  dorna.urdf.xacro  dorna_macro.xacro
src/dorna_robot/hardware/: dorna_hardware_interface.cpp
src/dorna_robot/hardware/include/ros2_control_hwI/: dorna_hardware_interface.hpp
src/dorna_robot/meshes/: link1.STL  link3.STL
(+484 files in other folders)
